--- a/mp3-codec/Resources.resx
+++ b/mp3-codec/Resources.resx
@@ -120,6 +120,9 @@
   <data name="code" xml:space="preserve">
     <value>Code</value>
   </data>
+  <data name="encodeWav" xml:space="preserve">
+    <value>Encode to WAV</value>
+  </data>
   <data name="english" xml:space="preserve">
     <value>English</value>
   </data>
@@ -134,6 +137,12 @@
   </data>
   <data name="open" xml:space="preserve">
     <value>Open</value>
+  </data>
+  <data name="playMpeg" xml:space="preserve">
+    <value>Play MPEG file</value>
+  </data>
+  <data name="saveWav" xml:space="preserve">
+    <value>Save WAV file</value>
   </data>
   <data name="ukrainian" xml:space="preserve">
     <value>Ukrainian</value>
