--- a/mp3-codec/Resources.uk-UA.resx
+++ b/mp3-codec/Resources.uk-UA.resx
@@ -135,11 +135,17 @@
   <data name="language" xml:space="preserve">
     <value>Мова</value>
   </data>
+  <data name="next" xml:space="preserve">
+    <value>Вперед</value>
+  </data>
   <data name="open" xml:space="preserve">
     <value>Відкрити</value>
   </data>
   <data name="playMpeg" xml:space="preserve">
     <value>Програти MPEG файл</value>
+  </data>
+  <data name="prev" xml:space="preserve">
+    <value>Назад</value>
   </data>
   <data name="saveWav" xml:space="preserve">
     <value>Зберегти WAV</value>
